2004-11-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/diagramactions.py: Made a start if simple copy/paste
	functionality.

2004-11-04  Jeroen Vloothuis <jeroen@vloothuis.net>
        * gaphor/ui/diagramactions.py: Implemented a confirmation dialog for
        the delete action.

2004-11-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/xmlwriter.py: new file. XMLGenerator with CDATA handling
	following the SAX standard.
	* gaphor/storage.py: (save_generator) use XMLWriter for saving, no
	longer produces XML statement itself. NOTE: also accepts the writer
	as argument, no more filename!

2004-11-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: added direction arrow.
	* gaphor/diagram/itemactions.py: added two new actions:
	AssociationShowDirection: show/hide direction arrow (default = hide)
	AssociationInvertDirection: invert the association direction.

2004-11-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: added name and made a start with
	direction.
	* gaphor/ui/mainactions.py: confirmation dialog when starting a new
	model.

2004-10-29  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/feature.py: fixed bug that didn't render attributes
	when they have to.
	* gaphor/diagram/__init__.py: make register_item accept more default
	classes. (fixes DND of Stereotype item).
	* gaphor/diagram/diagramitem.py: bug fix: UML elements were no longer
	removed when all presentations were removed.
	* gaphor/UML/uml2.gaphor: added Classifier.appliedStereotype (in stead
	of Class.appliedStereotype).
	* gaphor/storage.py: made conversion from ClassItem to InterfaceItem
	for pre-0.6.2 classes
	* setup.py: bump version to 0.6.2 to ensure the conversion works.

2004-10-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/classifier.py: new class. Generic subclass for
	Class, Interface, Component, Actor, etc.
	* gaphor/diagram/actor.py: made subclass of ClassifierItem.