@@ -1,0 +1,3 @@
+# vim:sw=4:et
+
+from alignment import *
